# asciiArtNPP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: README.md  bikesgray.pgm  sloth.pgm
example_results/: sloth_80_ascii.txt  sloth_full_ascii.txt
include/: ascii_art.h
src/: ascii_art.cpp
